# granite.build

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  pyproject.toml
docs/: rabbitmq-event-notifications.md
scripts/: test-event-publish-e2e.py
src/gbcli/commands/: command_admin.py  command_artifact.py  command_auth.py  command_build.py  command_cleanup.py  command_model.py  command_secret.py  command_space.py  command_step.py  command_tag.py  command_template.py  common_options.py
src/gbcli/services/: service_auth.py  service_build.py  service_step.py  service_template.py  service_version.py
src/gbcli/utils/: gbconstants.py  gbcredentials.py  gbserver.py  gh_auth.py  gh_clone.py  log_query.py  utils.py  versionutil.py
src/gbcommon/types/: constants.py
src/gbserver/api/: auth.py  auth_providers.py  build_files.py  build_files_paths.py  builds.py  event_subscribe.py  lsf_tunnel.py  root_api.py
src/gbserver/buildrunner/: build_event_publish_logger.py  build_utils.py  buildlogger.py
src/gbserver/commands/: command_standalone.py
src/gbserver/environment/: environment.py  lsf.py  lsf_paths.py
src/gbserver/lineage/: wandb_jobstats.py  wandb_service.py
src/gbserver/messaging/: build_event_publisher.py  credential_cleanup.py  rabbitmq_admin.py  subscription_service.py
src/gbserver/types/: constants.py  constants_base.py  gbserverenvconfig.py
src/gbserver/utils/: ssh_tunnel.py
test-data/integration/standalone/buildrunner/docker/docker-hf/: build.yaml
test-data/integration/standalone/buildrunner/docker/docker-hf/space/: space.yaml
test-data/integration/standalone/buildrunner/docker/docker-hf/space/assetstores/hf/: store.yaml
test-data/integration/standalone/buildrunner/docker/docker-hf/space/environments/docker/: environment.yaml
test/integration/ibm/messaging/: test_nats_jetstream_integration.py
test/integration/messaging/: test_event_subscribe_e2e.py
test/integration/standalone/buildrunner/docker/: test_docker_hf.py
test/lib/: test_utils.py
test/unit/api/: test_build_files.py  test_event_subscribe.py
test/unit/buildrunner/: test_build_event_publish_logger.py
test/unit/commands/: test_format_flag.py
test/unit/messaging/: test_build_event_publisher.py  test_credential_cleanup.py  test_rabbitmq_admin.py
test/unit/standalone/: test_gbcli_standalone_guards.py  test_gbcli_subcommand_guards.py  test_regression_smoke.py  test_space_refresh_standalone.py
test/unit/uri/: test_git.py
test/unit/utils/: test_log_query_standalone.py  test_service_build_update_standalone.py  test_service_version_standalone.py  test_versionutil_standalone.py
